--- a/index.html
+++ b/index.html
@@ -4,128 +4,129 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="img/logo-clothing-sin-palabras.png">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Inicio</title>
 </head>
 
 <body>
+  <div class="body-grid-index">
+    <header>
 
-  <header>
-
-    <div class="logo-menu-header">
-      <a href="./index.html" alt="Inicio" title="Inicio"><img src="./img/logo-clothing-sin-palabras.png"
-          alt="Logo principal del sitio" class="logo-header"></a>
-    </div>
-
-    <div class="menu-desplegable">
-      <img src="./img/menu-desplegable.png" alt="Menu desplegable"> <!--Futuro menu desplegable-->
-    </div>
-
-    <nav>
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./pages/catalogo.html">Catálogo</a></li>
-        <li><a href="./pages/novedades.html">Novedades</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
-        <li><a href="./pages/nosotros.html">Nosotros</a></li>
-      </ul>
-    </nav>
-
-    <div class="lupa-carrito-header">
-      <div class="header-search-bar"><label for="search-bar"></label>
-        <input type="search" id="search-bar" placeholder="Buscar productos" class="lupa-input-header">
-        <img src="./img/lupa.png" alt="Buscar productos" title="Buscar productos"> <!-- FUTURO ONCLICK BUTTON  -->
+      <div class="logo-menu-header">
+        <a href="./index.html" alt="Inicio" title="Inicio"><img src="./img/logo-clothing-sin-palabras.png"
+            alt="Logo principal del sitio" class="logo-header"></a>
       </div>
-      <img src="./img/carrito.png" alt="Carrito" title="Carrito"> <!--FUTURA PAGINA DE CARRITO-->
-    </div>
 
-  </header>
-
-
-  <main>
-
-    <div class="titulo-h1">
-      <h1>El lujo de lo hecho a mano</h1>
-    </div>
-
-    <section class="index-section-1">
-      <div class="div-index-section-1">
-        <h2>Moda de triple impacto</h2>
-        <p>Clothing nace como respuesta a la demanda de consumidores de lujo que esperan una mayor responsabilidad
-          ecológica , a
-          la vez que piezas de gran calidad y en edición limitada.</p>
-        <p>Creamos nuestras mas exquisitas piezas de moda en colaboración con un equipo cualificado de expertos en la
-          técnica de handmade, como también co-diseñamos con artesanas de las comunidades de pueblos originarios, y en
-          alianza con organizaciones que trabajan por una moda con triple impacto.</p>
+      <div class="menu-desplegable">
+        <img src="./img/menu-desplegable.png" alt="Menu desplegable"> <!--Futuro menu desplegable-->
       </div>
-      <div class="imagen-section-1">
-        <img src="./img/womantitle1.jpg" alt="imagen">
-        <p>desafía tu imaginación, accede a un mundo de lujo, exótico y lejano</p>
-      </div>
-    </section>
 
-    <section class="index-section-2">
-      <h2>EL lujo de poseer algo único, irrepetible y sostenible con el medio ambiente</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/mQcL-RzPDZs?si=EU75kO2y5M0Pfie4"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
-    </section>
+      <nav>
+        <ul>
+          <li><a href="./index.html" class="focus">Inicio</a></li>
+          <li><a href="./pages/catalogo.html">Catálogo</a></li>
+          <li><a href="./pages/novedades.html">Novedades</a></li>
+          <li><a href="./pages/contacto.html">Contacto</a></li>
+          <li><a href="./pages/nosotros.html">Nosotros</a></li>
+        </ul>
+      </nav>
 
-    <section class="coleccion-2023-index">
-      <h2>Colección 2023</h2>
-      <div class="imgs-coleccion-2023-index">
-        <div>
-          <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/sombrero.jpg"
-              alt="Categoría Sombreros">
-            <p>Sombreros</p>
-          </a>
+      <div class="lupa-carrito-header">
+        <div class="header-search-bar"><label for="search-bar"></label>
+          <input type="search" id="search-bar" placeholder="Buscar productos" class="lupa-input-header">
+          <img src="./img/lupa.png" alt="Buscar productos" title="Buscar productos"> <!-- FUTURO ONCLICK BUTTON  -->
         </div>
-        <div>
-          <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/cartera3.jpg"
-              alt="Categoría Carteras">
-            <p>Carteras</p>
-          </a>
-        </div>
-        <div>
-          <a href="./pages/catalogo.html#catalogoropa"><img src="img/man2.jpg" alt="Categoría Ropa">
-            <p>Ropa</p>
-          </a>
-        </div>
+        <img src="./img/carrito.png" alt="Carrito" title="Carrito"> <!--FUTURA PAGINA DE CARRITO-->
       </div>
-    </section>
-  </main>
+
+    </header>
 
 
-  <footer>
+    <main>
 
-    <div>
-      <p>Copyright © 2021-2023 Clothing.</p>
-    </div>
+      <div class="titulo-h1">
+        <h1>El lujo de lo hecho a mano</h1>
+      </div>
 
-    <div class="socials-footer">
-      <a href="https://www.facebook.com/" alt="facebook" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000">
-          <path
-            d="M24 12.07C24 5.41 18.63 0 12 0S0 5.4 0 12.07C0 18.1 4.39 23.1 10.13 24v-8.44H7.08v-3.49h3.04V9.41c0-3.02 1.8-4.7 4.54-4.7 1.31 0 2.68.24 2.68.24v2.97h-1.5c-1.5 0-1.96.93-1.96 1.89v2.26h3.32l-.53 3.5h-2.8V24C19.62 23.1 24 18.1 24 12.07" />
-        </svg>
-      </a>
-      <a href="https://www.twitter.com/" alt="twitter" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000">
-          <path
-            d="M24 4.37a9.6 9.6 0 0 1-2.83.8 5.04 5.04 0 0 0 2.17-2.8c-.95.58-2 1-3.13 1.22A4.86 4.86 0 0 0 16.61 2a4.99 4.99 0 0 0-4.79 6.2A13.87 13.87 0 0 1 1.67 2.92 5.12 5.12 0 0 0 3.2 9.67a4.82 4.82 0 0 1-2.23-.64v.07c0 2.44 1.7 4.48 3.95 4.95a4.84 4.84 0 0 1-2.22.08c.63 2.01 2.45 3.47 4.6 3.51A9.72 9.72 0 0 1 0 19.74 13.68 13.68 0 0 0 7.55 22c9.06 0 14-7.7 14-14.37v-.65c.96-.71 1.79-1.6 2.45-2.61z" />
-        </svg>
-      </a>
-      <a href="https://www.instagram.com/" alt="instagram" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000">
-          <path
-            d="M16.98 0a6.9 6.9 0 0 1 5.08 1.98A6.94 6.94 0 0 1 24 7.02v9.96c0 2.08-.68 3.87-1.98 5.13A7.14 7.14 0 0 1 16.94 24H7.06a7.06 7.06 0 0 1-5.03-1.89A6.96 6.96 0 0 1 0 16.94V7.02C0 2.8 2.8 0 7.02 0h9.96zm.05 2.23H7.06c-1.45 0-2.7.43-3.53 1.25a4.82 4.82 0 0 0-1.3 3.54v9.92c0 1.5.43 2.7 1.3 3.58a5 5 0 0 0 3.53 1.25h9.88a5 5 0 0 0 3.53-1.25 4.73 4.73 0 0 0 1.4-3.54V7.02a5 5 0 0 0-1.3-3.49 4.82 4.82 0 0 0-3.54-1.3zM12 5.76c3.39 0 6.2 2.8 6.2 6.2a6.2 6.2 0 0 1-12.4 0 6.2 6.2 0 0 1 6.2-6.2zm0 2.22a3.99 3.99 0 0 0-3.97 3.97A3.99 3.99 0 0 0 12 15.92a3.99 3.99 0 0 0 3.97-3.97A3.99 3.99 0 0 0 12 7.98zm6.44-3.77a1.4 1.4 0 1 1 0 2.8 1.4 1.4 0 0 1 0-2.8z" />
-        </svg>
-      </a>
-    </div>
+      <section class="index-section-1">
+        <div class="div-index-section-1">
+          <h2>Moda de triple impacto</h2>
+          <p>Clothing nace como respuesta a la demanda de consumidores de lujo que esperan una mayor responsabilidad
+            ecológica , a
+            la vez que piezas de gran calidad y en edición limitada.</p>
+          <p>Creamos nuestras mas exquisitas piezas de moda en colaboración con un equipo cualificado de expertos en la
+            técnica de handmade, como también co-diseñamos con artesanas de las comunidades de pueblos originarios, y en
+            alianza con organizaciones que trabajan por una moda con triple impacto.</p>
+        </div>
+        <div class="imagen-section-1">
+          <img src="./img/womantitle1.jpg" alt="imagen">
+          <p>desafía tu imaginación, accede a un mundo de lujo, exótico y lejano</p>
+        </div>
+      </section>
 
-  </footer>
+      <section class="index-section-2">
+        <h2>EL lujo de poseer algo único, irrepetible y sostenible con el medio ambiente</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mQcL-RzPDZs?si=EU75kO2y5M0Pfie4"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </section>
+
+      <section class="coleccion-2023-index">
+        <h2>Colección 2023</h2>
+        <div class="imgs-coleccion-2023-index">
+          <div>
+            <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/sombrero.jpg"
+                alt="Categoría Sombreros">
+              <p>Sombreros</p>
+            </a>
+          </div>
+          <div>
+            <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/cartera3.jpg"
+                alt="Categoría Carteras">
+              <p>Carteras</p>
+            </a>
+          </div>
+          <div>
+            <a href="./pages/catalogo.html#catalogoropa"><img src="img/man2.jpg" alt="Categoría Ropa">
+              <p>Ropa</p>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+
+    <footer>
+
+      <div>
+        <p>Copyright © 2021-2023 Clothing.</p>
+      </div>
+
+      <div class="socials-footer">
+        <a href="https://www.facebook.com/" alt="facebook" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000">
+            <path
+              d="M24 12.07C24 5.41 18.63 0 12 0S0 5.4 0 12.07C0 18.1 4.39 23.1 10.13 24v-8.44H7.08v-3.49h3.04V9.41c0-3.02 1.8-4.7 4.54-4.7 1.31 0 2.68.24 2.68.24v2.97h-1.5c-1.5 0-1.96.93-1.96 1.89v2.26h3.32l-.53 3.5h-2.8V24C19.62 23.1 24 18.1 24 12.07" />
+          </svg>
+        </a>
+        <a href="https://www.twitter.com/" alt="twitter" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000">
+            <path
+              d="M24 4.37a9.6 9.6 0 0 1-2.83.8 5.04 5.04 0 0 0 2.17-2.8c-.95.58-2 1-3.13 1.22A4.86 4.86 0 0 0 16.61 2a4.99 4.99 0 0 0-4.79 6.2A13.87 13.87 0 0 1 1.67 2.92 5.12 5.12 0 0 0 3.2 9.67a4.82 4.82 0 0 1-2.23-.64v.07c0 2.44 1.7 4.48 3.95 4.95a4.84 4.84 0 0 1-2.22.08c.63 2.01 2.45 3.47 4.6 3.51A9.72 9.72 0 0 1 0 19.74 13.68 13.68 0 0 0 7.55 22c9.06 0 14-7.7 14-14.37v-.65c.96-.71 1.79-1.6 2.45-2.61z" />
+          </svg>
+        </a>
+        <a href="https://www.instagram.com/" alt="instagram" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000">
+            <path
+              d="M16.98 0a6.9 6.9 0 0 1 5.08 1.98A6.94 6.94 0 0 1 24 7.02v9.96c0 2.08-.68 3.87-1.98 5.13A7.14 7.14 0 0 1 16.94 24H7.06a7.06 7.06 0 0 1-5.03-1.89A6.96 6.96 0 0 1 0 16.94V7.02C0 2.8 2.8 0 7.02 0h9.96zm.05 2.23H7.06c-1.45 0-2.7.43-3.53 1.25a4.82 4.82 0 0 0-1.3 3.54v9.92c0 1.5.43 2.7 1.3 3.58a5 5 0 0 0 3.53 1.25h9.88a5 5 0 0 0 3.53-1.25 4.73 4.73 0 0 0 1.4-3.54V7.02a5 5 0 0 0-1.3-3.49 4.82 4.82 0 0 0-3.54-1.3zM12 5.76c3.39 0 6.2 2.8 6.2 6.2a6.2 6.2 0 0 1-12.4 0 6.2 6.2 0 0 1 6.2-6.2zm0 2.22a3.99 3.99 0 0 0-3.97 3.97A3.99 3.99 0 0 0 12 15.92a3.99 3.99 0 0 0 3.97-3.97A3.99 3.99 0 0 0 12 7.98zm6.44-3.77a1.4 1.4 0 1 1 0 2.8 1.4 1.4 0 0 1 0-2.8z" />
+          </svg>
+        </a>
+      </div>
+
+    </footer>
+  </div>
 </body>
 
 </html>
