--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="../img/logo-clothing-sin-palabras.png">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="stylesheet" href="../css/styles.css">
   <title>Nosotros</title>
 </head>
 
@@ -28,7 +28,7 @@
         <li><a href="../pages/catalogo.html">Catálogo</a></li>
         <li><a href="../pages/novedades.html">Novedades</a></li>
         <li><a href="../pages/contacto.html">Contacto</a></li>
-        <li><a href="../pages/nosotros.html">Nosotros</a></li>
+        <li><a href="../pages/nosotros.html" class="focus">Nosotros</a></li>
       </ul>
     </nav>
 
