--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="../img/logo-clothing-sin-palabras.png">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="stylesheet" href="../css/styles.css">
   <title>Novedades</title>
 </head>
 
@@ -26,7 +26,7 @@
       <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="../pages/catalogo.html">Catálogo</a></li>
-        <li><a href="../pages/novedades.html">Novedades</a></li>
+        <li><a href="../pages/novedades.html" class="focus">Novedades</a></li>
         <li><a href="../pages/contacto.html">Contacto</a></li>
         <li><a href="../pages/nosotros.html">Nosotros</a></li>
       </ul>
