--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -148,6 +148,8 @@
 
   <footer>
 
+    <div><img src="./img/logo-clothing.png" alt="Logo Clothing"></div>
+
     <div>
       <p>Copyright © 2021-2023 Clothing.</p>
     </div>
