--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;800;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="../img/favicon.png">
@@ -13,56 +16,56 @@
 
 <body>
 
-  <header>
+  <header class="navbar navbar-expand-md border-bottom sticky-top">
+    <div class="container-lg">
+      <a class="navbar-brand" href="../index.html" alt="Inicio" title="Inicio"><img
+          src="../img/logo-clothing-sin-palabras.png" alt="Logo principal del sitio"></a>
+      <button class="navbar-toggler btn-navbar" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <nav class="navbar navbar-expand-xl">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html" alt="Inicio" title="Inicio"><img
-            src="../img/logo-clothing-sin-palabras.png" alt="Logo principal del sitio"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link  active" aria-current="page" href="./catalogo.html">Catálogo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./novedades.html">Novedades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Mas
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Tu historial de compras</a></li>
-                <li><a class="dropdown-item" href="#">Tu carrito</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Tu perfil</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
+      <form class="d-none d-xxl-flex margin-left-searchbar" role="search">
+        <input class="form-control me-2 d-none d-xxl-flex" type="search" placeholder="Encontrá lo que quieras"
+          aria-label="Search">
+        <button class="btn d-none d-xxl-flex btn-searchbar" type="submit"></button>
+      </form>
 
+      <nav class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item  items-navbar">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item  items-navbar">
+            <a class="nav-link focus" aria-current="page" href="#">Catálogo</a>
+          </li>
+          <li class="nav-item  items-navbar">
+            <a class="nav-link" href="../pages/novedades.html">Novedades</a>
+          </li>
+          <li class="nav-item  items-navbar">
+            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item  items-navbar">
+            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link items-navbar dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Mas
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Tu historial de compras</a></li>
+              <li><a class="dropdown-item" href="#">Tu carrito</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Tu perfil</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
 
