se completo el index en responsive

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h1>El lujo de lo hecho a mano</h1>
     </div>
 
-    <section class="index-section-1">
+    <section class="index-section-1 containerb">
       <div class="div-index-section-1">
         <h2>Moda de triple impacto</h2>
         <p>Clothing nace como respuesta a la demanda de consumidores de lujo que esperan una mayor responsabilidad
@@ -99,21 +99,22 @@
         allowfullscreen></iframe>
     </section>
 
-    <section class="coleccion-2023-index">
+    <section class="coleccion-2023-index containerb">
       <h2 class="h2-col-2023">Colección 2023</h2>
       <div class="index-col-sombrero">
-        <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/sombrero.jpg"
-            alt="Categoría Sombreros">
+        <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/sombrero.jpg" alt="Categoría Sombreros"
+            class="cards">
           <p>Sombreros</p>
         </a>
       </div>
       <div class="index-col-carteras">
-        <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/cartera3.jpg" alt="Categoría Carteras">
+        <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/cartera3.jpg" alt="Categoría Carteras"
+            class="cards">
           <p>Carteras</p>
         </a>
       </div>
       <div class="index-col-ropa">
-        <a href="./pages/catalogo.html#catalogoropa"><img src="img/man2.jpg" alt="Categoría Ropa">
+        <a href="./pages/catalogo.html#catalogoropa"><img src="img/man2.jpg" alt="Categoría Ropa" class="cards">
           <p>Ropa</p>
         </a>
       </div>
