se termino el catalogo.html en la version mobile

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -69,43 +69,44 @@
   </header>
 
 
-  <main>
+  <main class="catalogo-main">
 
 
     <div class="catalogo-h2">
       <h2>Conocé nuestra colección 2023</h2>
     </div>
 
-    <section class="lo-mas-vendido" id="catalogoropa">
-      <h3>Lo mas vendido</h3>
+    <section class="lo-mas-vendido containerb t-align-center" id="catalogoropa">
+      <h3>Lo mas vendido 🔥</h3>
       <div>
         <a href=""><img src="../img/producto1.jpg" alt="producto 1">
-          <span>$7500</span></a>
+          <span class="cards-span">$7500</span></a>
         <a href=""><img src="../img/producto2.jpg" alt="producto 2">
-          <span>$5500</span></a>
+          <span class="cards-span">$5500</span></a>
         <a href=""><img src="../img/producto3.jpg" alt="producto 3">
-          <span>$13000</span></a>
+          <span class="cards-span">$13000</span></a>
         <a href=""><img src="../img/producto4.jpg" alt="producto 4">
-          <span>$7000</span></a>
+          <span class="cards-span">$7000</span></a>
       </div>
     </section>
 
-    <section class="catalogo-gyc-vestidos">
+
+    <section class="catalogo-gyc-vestidos containerb t-align-center">
 
       <h3>Gorros y Carteras</h3>
 
       <div class="catalogo-gorros-y-carteras" id="catalogosombrerosycarteras">
 
         <a href=""><img src="../img/gorro1.jpg" alt="producto 1">
-          <span>$3500</span></a>
+          <span class="cards-span">$3500</span></a>
         <a href=""><img src="../img/gorro2.jpg" alt="producto 2">
-          <span>$4500</span></a>
+          <span class="cards-span">$4500</span></a>
         <a href=""><img src="../img/gorro4.jpg" alt="producto 3">
-          <span>$14500</span></a>
+          <span class="cards-span">$14500</span></a>
         <a href=""><img src="../img/cartera3.jpg" alt="producto 4">
-          <span>$9500</span></a>
+          <span class="cards-span">$9500</span></a>
         <a href=""><img src="../img/maniqui.jpg" alt="producto 5">
-          <span>$5500</span></a>
+          <span class="cards-span">$5500</span></a>
 
       </div>
 
@@ -114,30 +115,30 @@
       <div class="catalogo-vestidos">
 
         <a href=""><img src="../img/vestido1.jpg" alt="producto 1">
-          <span>$17000</span></a>
+          <span class="cards-span">$17000</span></a>
         <a href=""><img src="../img/vestido2.jpg" alt="producto 2">
-          <span>$25500</span></a>
+          <span class="cards-span">$25500</span></a>
         <a href=""><img src="../img/vestido3.jpg" alt="producto 3">
-          <span>$18000</span></a>
+          <span class="cards-span">$18000</span></a>
         <a href=""><img src="../img/woman5.jpg" alt="producto 4">
-          <span>$22000</span></a>
+          <span class="cards-span">$22000</span></a>
         <a href=""><img src="../img/woman6.jpg" alt="producto 5">
-          <span>$19500</span></a>
+          <span class="cards-span">$19500</span></a>
 
       </div>
 
     </section>
 
-    <section class="compra-por-genero">
+    <section class="compra-por-genero t-align-center">
 
       <h3>Comprá por género</h3>
       <div>
         <a href=""><img src="../img/man1.jpg" alt="Hombre">
-          <span>Hombre</span></a>
+          <span class="cards-span">Hombre</span></a>
         <a href=""><img src="../img/woman2.jpg" alt="Mujer">
-          <span>Mujer</span></a>
+          <span class="cards-span">Mujer</span></a>
         <a href=""><img src="../img/girl.jpg" alt="Niños">
-          <span>Niños</span></a>
+          <span class="cards-span">Niños</span></a>
       </div>
     </section>
 
