se completo el responsive del catalogo.html

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -72,21 +72,19 @@
   <main class="catalogo-main">
 
 
-    <div class="catalogo-h2">
+    <div class="catalogo-h2 containerb">
       <h2>Conocé nuestra colección 2023</h2>
     </div>
 
     <section class="lo-mas-vendido containerb t-align-center" id="catalogoropa">
       <h3>Lo mas vendido 🔥</h3>
       <div>
-        <a href=""><img src="../img/producto1.jpg" alt="producto 1">
+        <a href=""><img src="../img/producto1.jpg" alt="producto 1 de lo mas vendido">
           <span class="cards-span">$7500</span></a>
-        <a href=""><img src="../img/producto2.jpg" alt="producto 2">
+        <a href=""><img src="../img/producto2.jpg" alt="producto 2 de lo mas vendido">
           <span class="cards-span">$5500</span></a>
-        <a href=""><img src="../img/producto3.jpg" alt="producto 3">
+        <a href=""><img src="../img/producto3.jpg" alt="producto 3 de lo mas vendido">
           <span class="cards-span">$13000</span></a>
-        <a href=""><img src="../img/producto4.jpg" alt="producto 4">
-          <span class="cards-span">$7000</span></a>
       </div>
     </section>
 
@@ -97,39 +95,45 @@
 
       <div class="catalogo-gorros-y-carteras" id="catalogosombrerosycarteras">
 
-        <a href=""><img src="../img/gorro1.jpg" alt="producto 1">
-          <span class="cards-span">$3500</span></a>
-        <a href=""><img src="../img/gorro2.jpg" alt="producto 2">
-          <span class="cards-span">$4500</span></a>
-        <a href=""><img src="../img/gorro4.jpg" alt="producto 3">
-          <span class="cards-span">$14500</span></a>
-        <a href=""><img src="../img/cartera3.jpg" alt="producto 4">
-          <span class="cards-span">$9500</span></a>
-        <a href=""><img src="../img/maniqui.jpg" alt="producto 5">
-          <span class="cards-span">$5500</span></a>
+        <div class="div-gorros-y-carteras"><a href=""><img src="../img/gorro1.jpg"
+              alt="producto 1 de gorros y carteras">
+            <span class="cards-span">$3500</span></a>
+          <a href=""><img src="../img/gorro2.jpg" alt="producto 2 de gorros y carteras">
+            <span class="cards-span">$4500</span></a>
+          <a href=""><img src="../img/gorro4.jpg" alt="producto 3 de gorros y carteras">
+            <span class="cards-span">$14500</span></a>
+        </div>
+        <div class="div-gorros-y-carteras">
+          <a href=""><img src="../img/cartera3.jpg" alt="producto 4 de gorros y carteras">
+            <span class="cards-span">$9500</span></a>
+          <a href=""><img src="../img/maniqui.jpg" alt="producto 5 de gorros y carteras">
+            <span class="cards-span">$5500</span></a>
+        </div>
 
       </div>
 
       <h3>Vestidos</h3>
 
-      <div class="catalogo-vestidos">
+      <div class="catalogo-vestidos containerb">
 
-        <a href=""><img src="../img/vestido1.jpg" alt="producto 1">
-          <span class="cards-span">$17000</span></a>
-        <a href=""><img src="../img/vestido2.jpg" alt="producto 2">
-          <span class="cards-span">$25500</span></a>
-        <a href=""><img src="../img/vestido3.jpg" alt="producto 3">
-          <span class="cards-span">$18000</span></a>
-        <a href=""><img src="../img/woman5.jpg" alt="producto 4">
-          <span class="cards-span">$22000</span></a>
-        <a href=""><img src="../img/woman6.jpg" alt="producto 5">
-          <span class="cards-span">$19500</span></a>
+        <div class="div-gorros-y-carteras"><a href=""><img src="../img/vestido1.jpg" alt="producto 1">
+            <span class="cards-span">$17000</span></a>
+          <a href=""><img src="../img/vestido2.jpg" alt="producto 2">
+            <span class="cards-span">$25500</span></a>
+          <a href=""><img src="../img/vestido3.jpg" alt="producto 3">
+            <span class="cards-span">$18000</span></a>
+        </div>
+        <div class="div-gorros-y-carteras"><a href=""><img src="../img/woman5.jpg" alt="producto 4">
+            <span class="cards-span">$22000</span></a>
+          <a href=""><img src="../img/woman6.jpg" alt="producto 5">
+            <span class="cards-span">$19500</span></a>
+        </div>
 
       </div>
 
     </section>
 
-    <section class="compra-por-genero t-align-center">
+    <section class="compra-por-genero t-align-center containerb">
 
       <h3>Comprá por género</h3>
       <div>
