se termino novedades.html

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -69,20 +69,20 @@
   </header>
 
 
-  <main>
+  <main class="main-novedades">
 
     <section class="novedades1">
-      <h2>Novedades</h2>
-      <p>Lo que se viene</p>
+      <h2 class="novedades1-h2">Novedades</h2>
+      <p class="novedades-undertitle">Lo que se viene</p>
     </section>
 
-    <section class="lo-nuevo">
+    <section class="lo-nuevo ">
 
-      <div>
+      <div class="novedades-col-v-2023">
         <h3>Colección verano 2023</h3>
         <a href=""><img src="../img/woman4.jpg" alt="Colección verano 2023">
           <span>Lorem ipsum dolor sit amet.</span></a>
-      </div> <!--Futuro carousel-->
+      </div>
 
       <div>
         <h3>Colección 2024</h3>
@@ -96,7 +96,7 @@
     </section>
 
     <section class="ultimas-novedades">
-      <h3>Enterate de las ultimas novedades antes que nadie</h3>
+      <h3 class="t-align-center">Enterate de las ultimas novedades antes que nadie</h3>
       <p>¡subscribite para recibir las ultimas ofertas!</p>
 
       <form action="">
