se completo contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,13 +69,13 @@
   </header>
 
 
-  <main>
+  <main class="main-contacto">
 
     <div class="contacto-title">
       <h2>Pongase en contacto con nosotros</h2>
     </div>
 
-    <section class="seccion-1-contacto">
+    <section class="seccion-1-contacto containerb">
 
       <div class="formulario-contacto">
         <h3>En que podemos ayudarle?</h3>
@@ -141,7 +141,7 @@
 
     </section>
 
-    <section class="encontranos">
+    <section class="encontranos containerb">
       <h3>Donde puede encontrarnos</h3>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d105096.8606120581!2d-58.48878105442307!3d-34.597159105185014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x95bcca8e2b2898a5%3A0x8ec2de8894d0287c!2sParaguay%202672%2C%20C1425%20BRD%2C%20Buenos%20Aires!3m2!1d-34.5971003!2d-58.406372899999994!5e0!3m2!1sen!2sar!4v1695561194130!5m2!1sen!2sar"
