se acomodo los span de novedades

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -69,14 +69,14 @@
   </header>
 
 
-  <main>
+  <main class="main-nosotros">
 
     <div class="nosotros-title">
       <h2>Quienes somos</h2>
     </div>
 
-    <section class="ropa-a-mano">
-      <div>
+    <section class="ropa-a-mano containerb">
+      <div class="div-ropa-a-mano">
         <h3>Ropa hecha a mano</h3>
         <img src="../img/lugar4.jpg" alt="imagen de ropa hecha a mano">
         <span>Lorem ipsum dolor sit amet.</span>
@@ -96,45 +96,45 @@
 
     </section>
 
-    <section class="como-empezo">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem voluptatibus esse consequatur fuga! Corrupti,
-        doloribus quis rerum, error, assumenda quibusdam explicabo impedit inventore dignissimos provident nisi. Aliquam
-        magnam explicabo quae.</p>
+    <section class="como-empezo containerb">
       <h3>Donde empezó todo</h3>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d105088.56985000301!2d-58.46397155412265!3d-34.60371120277911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-34.603738899999996!2d-58.381570399999994!5e0!3m2!1sen!2sar!4v1695561607357!5m2!1sen!2sar"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem voluptatibus esse consequatur fuga! Corrupti,
+        doloribus quis rerum, error, assumenda quibusdam explicabo impedit inventore dignissimos provident nisi. Aliquam
+        magnam explicabo quae.</p>
 
     </section>
-    <div class="div-block-nosotros">
+    <div class="div-nosotros">
       <h3>Descubre mas sobre nosotros</h3><a href="https://www.wikipedia.org/"
         target="_blank"><strong>→WIKI←</strong></a>
     </div>
     <section class="descubrir-mas">
 
-      <div class="nosotros-descubre-mas">
+      <div class="nosotros-descubre-mas containerb">
 
         <div>
-          <p>Persona1</p>
-          <img src="../img/woman6.jpg" alt="persona1">
+          <h4>Persona1</h4>
+          <img src="../img/woman6.jpg" alt="persona1" class="cards">
           <span>Lorem ipsum dolor sit amet.</span>
         </div>
 
         <div>
-          <p>Persona2</p>
-          <img src="../img/man3.jpg" alt="persona2">
+          <h4>Persona2</h4>
+          <img src="../img/man3.jpg" alt="persona2" class="cards">
           <span>Lorem ipsum dolor sit amet.</span>
         </div>
 
         <div>
-          <p>Persona3</p>
-          <img src="../img/woman5.jpg" alt="persona3">
+          <h4>Persona3</h4>
+          <img src="../img/woman5.jpg" alt="persona3" class="cards">
           <span>Lorem ipsum dolor sit amet.</span>
         </div>
       </div>
 
-      <div class="haciendo-la-ropa">
+      <div class="haciendo-la-ropa containerb">
         <h3>Haciendo la ropa</h3>
         <iframe width="695" height="450" src="https://www.youtube.com/embed/w5EGZw6Bzmo?si=JOIyCRDgXEl_ZzeL"
           title="YouTube video player" frameborder="0"
