--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -76,7 +76,7 @@
       <p class="novedades-undertitle">Lo que se viene</p>
     </section>
 
-    <section class="lo-nuevo ">
+    <section class="lo-nuevo">
 
       <div class="novedades-col-v-2023">
         <h3>Colección verano 2023</h3>
@@ -90,7 +90,7 @@
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
-        <span>Lorem ipsum dolor sit amet.</span>
+        <span class="iframe-span">Lorem ipsum dolor sit amet.</span>
       </div>
 
     </section>
