se completó nosotros.html

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -111,7 +111,7 @@
       <h3>Descubre mas sobre nosotros</h3><a href="https://www.wikipedia.org/"
         target="_blank"><strong>→WIKI←</strong></a>
     </div>
-    <section class="descubrir-mas">
+    <section class="descubrir-mas containerb">
 
       <div class="nosotros-descubre-mas containerb">
 
