se agrego estilo a novedades.html

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -80,8 +80,8 @@
 
       <div class="novedades-col-v-2023">
         <h3>Colección verano 2023</h3>
-        <a href=""><img src="../img/woman4.jpg" alt="Colección verano 2023">
-          <span>Lorem ipsum dolor sit amet.</span></a>
+        <a href=""><img src="../img/woman4.jpg" alt="Colección verano 2023" class="cards">
+        </a><span>Lorem ipsum dolor sit amet.</span>
       </div>
 
       <div>
@@ -89,7 +89,7 @@
         <iframe width="645" height="400" src="https://www.youtube.com/embed/UTjHPiH3zbA?si=TRGQS4mKtHdXrNii"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+          allowfullscreen class="cards"></iframe>
         <span class="iframe-span">Lorem ipsum dolor sit amet.</span>
       </div>
 
