--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -105,7 +105,7 @@
 
           <label for="email"></label>
           <input type="email" id="email" placeholder="email@email.com">
-          <a href="" class="subscribite-btn">Subscribite</a>
+          <a href="#" class="subscribite-btn">Subscribite</a>
         </div>
 
         <div>
