se acomodo el scss del index

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <section class="index-section-1 containerb">
-      <div class="div-index-section-1">
+      <div class="index-section-1-div">
         <h2>Moda de triple impacto</h2>
         <p>Clothing nace como respuesta a la demanda de consumidores de lujo que esperan una mayor responsabilidad
           ecológica , a
@@ -85,7 +85,7 @@
           técnica de handmade, como también co-diseñamos con artesanas de las comunidades de pueblos originarios, y en
           alianza con organizaciones que trabajan por una moda con triple impacto.</p>
       </div>
-      <div class="imagen-section-1">
+      <div class="index-section-1-img">
         <img src="./img/womantitle1.jpg" alt="imagen">
         <p>desafía tu imaginación, accede a un mundo de lujo, exótico y lejano</p>
       </div>
@@ -99,8 +99,8 @@
         allowfullscreen></iframe>
     </section>
 
-    <section class="coleccion-2023-index containerb">
-      <h2 class="h2-col-2023">Colección 2023</h2>
+    <section class="index-col containerb">
+      <h2 class="index-col-h2">Colección 2023</h2>
       <div class="index-col-sombrero">
         <a href="./pages/catalogo.html#catalogosombrerosycarteras"><img src="img/sombrero.jpg" alt="Categoría Sombreros"
             class="cards">
