se paso a sass muchas cosas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <header class="navbar navbar-expand-md border-bottom sticky-top">
+  <header class="navbar navbar-expand-md border-bottom sticky-top second-shadow">
     <div class="container-lg">
       <a class="navbar-brand" href="#" alt="Inicio" title="Inicio"><img src="./img/logo-clothing-sin-palabras.png"
           alt="Logo principal del sitio"></a>
@@ -126,11 +126,11 @@
 
     <div class="footer-div">
 
-      <div class="logo-footer"><img src="./img/logo-clothing.png" alt="Logo Clothing"></div>
+      <div class="footer-div-logo"><img src="/img/logo-clothing.png" alt="Logo Clothing"></div>
 
-      <p class="parrafo-footer">Copyright © 2021-2023 Clothing.</p>
+      <p class="footer-div-parrafo">Copyright © 2021-2023 Clothing.</p>
 
-      <div class="socials-footer">
+      <div class="footer-div-socials">
 
         <a href="https://www.facebook.com/" alt="facebook" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="#000">
