--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <header class="navbar navbar-expand-md border-bottom sticky-top">
+  <header class="navbar navbar-expand-md border-bottom sticky-top second-shadow">
     <div class="container-lg">
       <a class="navbar-brand" href="../index.html" alt="Inicio" title="Inicio"><img
           src="../img/logo-clothing-sin-palabras.png" alt="Logo principal del sitio"></a>
@@ -141,7 +141,7 @@
 
     </section>
 
-    <section class="encontranos containerb">
+    <section class="encontranos containerb second-bg-color main-shadow">
       <h3>Donde puede encontrarnos</h3>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d105096.8606120581!2d-58.48878105442307!3d-34.597159105185014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x95bcca8e2b2898a5%3A0x8ec2de8894d0287c!2sParaguay%202672%2C%20C1425%20BRD%2C%20Buenos%20Aires!3m2!1d-34.5971003!2d-58.406372899999994!5e0!3m2!1sen!2sar!4v1695561194130!5m2!1sen!2sar"
@@ -157,11 +157,11 @@
 
     <div class="footer-div">
 
-      <div class="logo-footer"><img src="../img/logo-clothing.png" alt="Logo Clothing"></div>
+      <div class="footer-div-logo"><img src="/img/logo-clothing.png" alt="Logo Clothing"></div>
 
-      <p class="parrafo-footer">Copyright © 2021-2023 Clothing.</p>
+      <p class="footer-div-parrafo">Copyright © 2021-2023 Clothing.</p>
 
-      <div class="socials-footer">
+      <div class="footer-div-socials">
 
         <a href="https://www.facebook.com/" alt="facebook" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="#000">
