--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <header class="navbar navbar-expand-md border-bottom sticky-top">
+  <header class="navbar navbar-expand-md border-bottom sticky-top second-shadow">
     <div class="container-lg">
       <a class="navbar-brand" href="../index.html" alt="Inicio" title="Inicio"><img
           src="../img/logo-clothing-sin-palabras.png" alt="Logo principal del sitio"></a>
@@ -73,12 +73,12 @@
 
     <section class="novedades1">
       <h2 class="novedades1-h2">Novedades</h2>
-      <p class="novedades-undertitle">Lo que se viene</p>
+      <p class="novedades1-undertitle">Lo que se viene</p>
     </section>
 
     <section class="lo-nuevo">
 
-      <div class="novedades-col-v-2023">
+      <div class="lo-nuevo-col-v-2023">
         <h3>Colección verano 2023</h3>
         <a href=""><img src="../img/woman4.jpg" alt="Colección verano 2023" class="cards">
         </a><span>Lorem ipsum dolor sit amet.</span>
@@ -95,7 +95,7 @@
 
     </section>
 
-    <section class="ultimas-novedades">
+    <section class="ultimas-novedades second-bg-color">
       <h3 class="t-align-center">Enterate de las ultimas novedades antes que nadie</h3>
       <p>¡subscribite para recibir las ultimas ofertas!</p>
 
@@ -105,7 +105,7 @@
 
           <label for="email"></label>
           <input type="email" id="email" placeholder="email@email.com">
-          <a href="#" class="subscribite-btn">Subscribite</a>
+          <a href="#" class="ultimas-novedades-btn">Subscribite</a>
         </div>
 
         <div>
@@ -131,11 +131,11 @@
 
     <div class="footer-div">
 
-      <div class="logo-footer"><img src="../img/logo-clothing.png" alt="Logo Clothing"></div>
+      <div class="footer-div-logo"><img src="/img/logo-clothing.png" alt="Logo Clothing"></div>
 
-      <p class="parrafo-footer">Copyright © 2021-2023 Clothing.</p>
+      <p class="footer-div-parrafo">Copyright © 2021-2023 Clothing.</p>
 
-      <div class="socials-footer">
+      <div class="footer-div-socials">
 
         <a href="https://www.facebook.com/" alt="facebook" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="#000">
