--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -72,7 +72,7 @@
   <main class="catalogo-main">
 
 
-    <div class="catalogo-h2 containerb">
+    <div class="catalogo-h2 second-bg-color main-shadow">
       <h2>Conocé nuestra colección 2023</h2>
     </div>
 
@@ -153,11 +153,11 @@
 
     <div class="footer-div">
 
-      <div class="logo-footer"><img src="../img/logo-clothing.png" alt="Logo Clothing"></div>
+      <div class="footer-div-logo"><img src="/img/logo-clothing.png" alt="Logo Clothing"></div>
 
-      <p class="parrafo-footer">Copyright © 2021-2023 Clothing.</p>
+      <p class="footer-div-parrafo">Copyright © 2021-2023 Clothing.</p>
 
-      <div class="socials-footer">
+      <div class="footer-div-socials">
 
         <a href="https://www.facebook.com/" alt="facebook" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="#000">
