--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <header class="navbar navbar-expand-md border-bottom sticky-top">
+  <header class="navbar navbar-expand-md border-bottom sticky-top second-shadow">
     <div class="container-lg">
       <a class="navbar-brand" href="../index.html" alt="Inicio" title="Inicio"><img
           src="../img/logo-clothing-sin-palabras.png" alt="Logo principal del sitio"></a>
@@ -96,7 +96,7 @@
 
     </section>
 
-    <section class="como-empezo containerb">
+    <section class="como-empezo containerb main-shadow">
       <h3>Donde empezó todo</h3>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d105088.56985000301!2d-58.46397155412265!3d-34.60371120277911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-34.603738899999996!2d-58.381570399999994!5e0!3m2!1sen!2sar!4v1695561607357!5m2!1sen!2sar"
@@ -153,11 +153,11 @@
 
     <div class="footer-div">
 
-      <div class="logo-footer"><img src="../img/logo-clothing.png" alt="Logo Clothing"></div>
+      <div class="footer-div-logo"><img src="/img/logo-clothing.png" alt="Logo Clothing"></div>
 
-      <p class="parrafo-footer">Copyright © 2021-2023 Clothing.</p>
+      <p class="footer-div-parrafo">Copyright © 2021-2023 Clothing.</p>
 
-      <div class="socials-footer">
+      <div class="footer-div-socials">
 
         <a href="https://www.facebook.com/" alt="facebook" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="#000">
