se paso todo el css a scss y se cambio el nombre de algunas clases

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -69,14 +69,14 @@
   </header>
 
 
-  <main class="catalogo-main">
+  <main class="catalogo">
 
 
     <div class="catalogo-h2 second-bg-color main-shadow">
       <h2>Conocé nuestra colección 2023</h2>
     </div>
 
-    <section class="lo-mas-vendido containerb t-align-center" id="catalogoropa">
+    <section class="catalogo-lo-mas-vendido containerb t-align-center" id="catalogoropa">
       <h3>Lo mas vendido 🔥</h3>
       <div>
         <a href=""><img src="../img/producto1.jpg" alt="producto 1 de lo mas vendido">
@@ -89,13 +89,13 @@
     </section>
 
 
-    <section class="catalogo-gyc-vestidos containerb t-align-center">
+    <section class="catalogo-productos containerb t-align-center">
 
       <h3>Gorros y Carteras</h3>
 
       <div class="catalogo-gorros-y-carteras" id="catalogosombrerosycarteras">
 
-        <div class="div-gorros-y-carteras"><a href=""><img src="../img/gorro1.jpg"
+        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/gorro1.jpg"
               alt="producto 1 de gorros y carteras">
             <span class="cards-span">$3500</span></a>
           <a href=""><img src="../img/gorro2.jpg" alt="producto 2 de gorros y carteras">
@@ -103,7 +103,7 @@
           <a href=""><img src="../img/gorro4.jpg" alt="producto 3 de gorros y carteras">
             <span class="cards-span">$14500</span></a>
         </div>
-        <div class="div-gorros-y-carteras">
+        <div class="catalogo-gorros-y-carteras-div">
           <a href=""><img src="../img/cartera3.jpg" alt="producto 4 de gorros y carteras">
             <span class="cards-span">$9500</span></a>
           <a href=""><img src="../img/maniqui.jpg" alt="producto 5 de gorros y carteras">
@@ -116,14 +116,14 @@
 
       <div class="catalogo-vestidos containerb">
 
-        <div class="div-gorros-y-carteras"><a href=""><img src="../img/vestido1.jpg" alt="producto 1">
+        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/vestido1.jpg" alt="producto 1">
             <span class="cards-span">$17000</span></a>
           <a href=""><img src="../img/vestido2.jpg" alt="producto 2">
             <span class="cards-span">$25500</span></a>
           <a href=""><img src="../img/vestido3.jpg" alt="producto 3">
             <span class="cards-span">$18000</span></a>
         </div>
-        <div class="div-gorros-y-carteras"><a href=""><img src="../img/woman5.jpg" alt="producto 4">
+        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/woman5.jpg" alt="producto 4">
             <span class="cards-span">$22000</span></a>
           <a href=""><img src="../img/woman6.jpg" alt="producto 5">
             <span class="cards-span">$19500</span></a>
