--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,15 +69,15 @@
   </header>
 
 
-  <main class="main-contacto">
+  <main class="contacto">
 
     <div class="contacto-title">
       <h2>Pongase en contacto con nosotros</h2>
     </div>
 
-    <section class="seccion-1-contacto containerb">
+    <section class="contacto-seccion-1 containerb">
 
-      <div class="formulario-contacto">
+      <div class="contacto-formulario">
         <h3>En que podemos ayudarle?</h3>
         <span>Envienos su consulta o pongase en contacto con nosotros</span>
         <div>
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="socials-contacto">
+      <div class="contacto-socials">
         <h3>Seguinos</h3>
         <ul>
           <li>
@@ -132,7 +132,7 @@
         </ul>
       </div>
 
-      <div class="comunicate-cn">
+      <div class="contacto-comunicate">
         <h3>Comunicate con nosotros</h3>
         <p>Te podes comunicar con nosotros todos los días de 8 a 20hrs.</p>
         <p>Escribinos al whatsapp al +54 9 11 1111-1111</p>
