--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -76,13 +76,13 @@
     </div>
 
     <section class="ropa-a-mano containerb">
-      <div class="div-ropa-a-mano">
+      <div class="ropa-a-mano-div">
         <h3>Ropa hecha a mano</h3>
         <img src="../img/lugar4.jpg" alt="imagen de ropa hecha a mano">
         <span>Lorem ipsum dolor sit amet.</span>
       </div>
 
-      <div class="texto-ropa-a-mano">
+      <div class="ropa-a-mano-text">
         <h3>Lorem ipsum dolor sit amet.</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis molestiae eius nisi illo corporis aliquam
           laborum facilis, odit deserunt. Voluptate eos cupiditate alias sit voluptates. Lorem ipsum dolor sit amet
@@ -113,7 +113,7 @@
     </div>
     <section class="descubrir-mas containerb">
 
-      <div class="nosotros-descubre-mas containerb">
+      <div class="descubrir-mas-nosotros containerb">
 
         <div>
           <h4>Persona1</h4>
@@ -134,7 +134,7 @@
         </div>
       </div>
 
-      <div class="haciendo-la-ropa containerb">
+      <div class="descubrir-mas-haciendo-la-ropa containerb">
         <h3>Haciendo la ropa</h3>
         <iframe width="695" height="450" src="https://www.youtube.com/embed/w5EGZw6Bzmo?si=JOIyCRDgXEl_ZzeL"
           title="YouTube video player" frameborder="0"
