se agrego animacion a los botones

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -118,7 +118,7 @@
 
       <div class="descubrir-mas-nosotros containerb">
 
-        <div>
+        <div class="persona1-div">
           <h4>Persona1</h4>
           <img src="../img/woman6.jpg" alt="persona1" class="cards">
           <span>Lorem ipsum dolor sit amet.</span>
