se agrego texto real a toda la pagina

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -82,19 +82,21 @@
       <div class="ropa-a-mano-div">
         <h3>Ropa hecha a mano</h3>
         <img src="../img/lugar4.jpg" alt="imagen de ropa hecha a mano">
-        <span>Lorem ipsum dolor sit amet.</span>
+        <span>Cada puntada cuenta una historia de creatividad y calidad.</span>
       </div>
 
       <div class="ropa-a-mano-text">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis molestiae eius nisi illo corporis aliquam
-          laborum facilis, odit deserunt. Voluptate eos cupiditate alias sit voluptates. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Odit cupiditate praesentium velit expedita repellat aspernatur, impedit nisi
-          porro itaque doloremque accusamus et aliquid vel maxime consequuntur ratione? Eum, odit. Nemo quas, modi,
-          impedit corrupti accusantium eos a necessitatibus sint iusto harum numquam libero qui, excepturi veritatis
-          velit nam? Debitis tempora fugiat, cum aperiam nisi porro sapiente at nulla eveniet odio fuga architecto, quas
-          blanditiis illo molestiae iste accusamus quibusdam commodi nobis animi modi nesciunt fugit? Labore unde
-          consectetur possimus tenetur nostrum minus sapiente rem, ad repellendus expedita asperiores nisi ullam!</p>
+        <h3>Artesanía en cada puntada</h3>
+        <p>En Clothing, nuestra historia es una odisea apasionante que se teje con hilos de creatividad,
+          compromiso y amor por la moda hecha a mano. Nuestra marca nació de una profunda apreciación por la artesanía y
+          el deseo de compartir esa pasión con el mundo.
+          Desde nuestros humildes comienzos en 2020, hemos cultivado una filosofía que valora la
+          originalidad y la calidad. Creemos que la moda es mucho más que prendas; es una forma de expresión, una
+          narrativa de individualidad y un tributo a la habilidad artesanal. Cada prenda que creamos en Clothing es
+          única, confeccionada con el máximo cuidado y atención al detalle.
+          Colaboramos estrechamente con talentosos artesanos locales que comparten nuestra visión de celebrar la belleza
+          de la simplicidad y la autenticidad. Nos enorgullece respaldar la tradición artesanal y, al mismo tiempo,
+          abrazar la innovación y la modernidad en nuestros diseños.</p>
       </div>
 
     </section>
@@ -119,31 +121,40 @@
       <div class="descubrir-mas-nosotros containerb">
 
         <div class="persona1-div">
-          <h4>Persona1</h4>
+          <h4>Elena Martínez - La visionaria de la artesanía</h4>
           <img src="../img/woman6.jpg" alt="persona1" class="cards">
-          <span>Lorem ipsum dolor sit amet.</span>
+          <span>Elena Martínez es la mente visionaria detrás de nuestra marca. Con una pasión innata por la moda y un
+            profundo amor por la artesanía, Elena ha dedicado su vida a fusionar la creatividad con la calidad en cada
+            prenda que creamos. Su habilidad para encontrar belleza en la simplicidad y su compromiso con los artesanos
+            locales son la esencia de nuestra marca.</span>
         </div>
 
         <div>
-          <h4>Persona2</h4>
+          <h4>Alejandro Pérez - El maestro de la confección</h4>
           <img src="../img/man3.jpg" alt="persona2" class="cards">
-          <span>Lorem ipsum dolor sit amet.</span>
+          <span>Alejandro Pérez es el experto artesano que garantiza que cada prenda que sale de nuestros talleres sea
+            una obra maestra. Con décadas de experiencia en la confección de ropa hecha a mano, Alejandro aporta su
+            conocimiento y habilidades para crear prendas únicas y de alta calidad. Su dedicación a los detalles y su
+            amor por la artesanía son la base de nuestro compromiso con la excelencia.</span>
         </div>
 
         <div>
-          <h4>Persona3</h4>
+          <h4>Sofía García - La encargada de la innovación</h4>
           <img src="../img/woman5.jpg" alt="persona3" class="cards">
-          <span>Lorem ipsum dolor sit amet.</span>
+          <span>Sofía García es la mente creativa detrás de nuestros diseños innovadores. Con un ojo agudo para las
+            tendencias y la moda, Sofía infunde frescura y originalidad en cada colección que creamos. Su pasión por la
+            moda contemporánea y su deseo de fusionar tradición y modernidad hacen que nuestras prendas sean relevantes
+            y emocionantes.</span>
         </div>
       </div>
 
       <div class="descubrir-mas-haciendo-la-ropa containerb">
-        <h3>Haciendo la ropa</h3>
+        <h3>Celebramos la moda hecha a mano en cada ocasión.</h3>
         <iframe width="695" height="450" src="https://www.youtube.com/embed/w5EGZw6Bzmo?si=JOIyCRDgXEl_ZzeL"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
-        <span>Lorem ipsum dolor sit amet.</span>
+        <span>Cada prenda es una obra de arte única, hecha con pasión.</span>
       </div>
 
     </section>
