--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -84,7 +84,7 @@
       <div class="lo-nuevo-col-v-2023">
         <h3>Colección verano 2023</h3>
         <a href=""><img src="../img/woman4.jpg" alt="Colección verano 2023" class="cards">
-        </a><span>Lorem ipsum dolor sit amet.</span>
+        </a><span>Telas de alta calidad y detalles únicos para que te sientas segura y elegante en cada ocasión.</span>
       </div>
 
       <div>
@@ -93,7 +93,9 @@
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen class="cards"></iframe>
-        <span class="iframe-span">Lorem ipsum dolor sit amet.</span>
+        <span class="iframe-span">Nuestra nueva colección celebra la individualidad y la autenticidad.</span><span>Cada
+          pieza es
+          única, y refleja la pasión y el esmero que ponemos en cada creación.</span>
       </div>
 
     </section>
